# arcs_cohort_description

./: .gitignore  CMakeLists.txt  README.md  dependencies.repos  dependencies.repos.https  package.xml
.github/workflows/: generate-docs.yml
description/: lidar.xacro  omni_robot.urdf  robot.urdf.xacro  robot_core.xacro  vectornav_imu.xacro  zed_camera.xacro
description/omni_robot/: omni_robot.usd
description/omni_robot/configuration/: omni_robot_base.usd  omni_robot_physics.usd
launch/: rsp.launch.py  view_model.launch.py
meshes/: new_back_left_wheel.stl  new_back_right_wheel.stl  new_base_link.stl  new_camera_mount.stl  new_front_left_wheel.stl  new_front_right_wheel.stl  new_imu.stl  vlp-16.stl  zedmini_center_link.STL
rviz_config/: robot_model.rviz  robot_model.rviz.template
templates/: README.template.md
xacro/: gazebo_control.xacro  gazebo_ros2_control.xacro  new_robot_core.xacro  robot.urdf.xacro  robot_core.xacro  zed_camera.xacro
